feat: add test preview file

--- a/internal/template/app.templ
+++ b/internal/template/app.templ
@@ -1,13 +1,13 @@
 package template
 
-templ app(logoBase64ImageData string) {
+templ app() {
   <!DOCTYPE html>
 	<html>
 		<head>
 			<title>Go WebAssembly</title>
 		</head>
 		<body style="background-color: #169790;">
-			@logoImage(logoBase64ImageData)
+			<h1>Go WebAssembly</h1>
 		</body>
 	</html>
 }
