feat: add footer

--- a/internal/template/app.templ
+++ b/internal/template/app.templ
@@ -18,6 +18,10 @@ templ app() {
 					@favoriteSection()
 					@experienceSection()
 				</div>
+				<footer class="flex justify-center items-center text-gray-500 text-sm mt-4 space-x-2">
+					<p>This website is hosted on Cloudflare Workers using TinyGo, templ, and WASM.</p>
+					<a href="https://github.com/monta-k/mnt-profile" target="_blank" class="text-blue-500">Github</a>
+				</footer>
 			</div>
 			<script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
 		</body>
