--- a/internal/template/experienceSection.templ
+++ b/internal/template/experienceSection.templ
@@ -9,7 +9,7 @@ type ExperienceData struct {
 }
 
 var experienceData = []ExperienceData{
-	{position: "Software Engineer", companyName: "OpenFashion Inc.", startYearMonth: "2020/02", endYearMonth: "now", detail: "Details to be added later"},
+	{position: "Software Engineer", companyName: "OpenFashion Inc.", startYearMonth: "2020/02", endYearMonth: "2024/09", detail: "Details to be added later"},
 	{position: "Software Engineer", companyName: "DEPARTURE Inc.", startYearMonth: "2019/04", endYearMonth: "2020/01", detail: "Details to be added later"},
 	{position: "System Engineer", companyName: "NTT DATA, Inc.", startYearMonth: "2018/04", endYearMonth: "2019/03", detail: "Details to be added later"},
 }
