feat: add degree

--- a/internal/template/profileSection.templ
+++ b/internal/template/profileSection.templ
@@ -7,10 +7,11 @@ type ProfileData struct {
 
 var profileData = []ProfileData{
 	{Key: "Name", Value: "Kobayashi"},
+	{Key: "Degree", Value: "Bachelor of Liberal Arts, Kobe University"},
 	{Key: "Job", Value: "Software Engineer"},
+	{Key: "Skills", Value: "Go, TypeScript"},
 	{Key: "Birthplace", Value: "Hyogo, Japan"},
 	{Key: "Location", Value: "Tokyo, Japan"},
-	{Key: "Skills", Value: "Go, TypeScript"},
 }
 
 templ profileSection() {
