--- a/internal/template/app.templ
+++ b/internal/template/app.templ
@@ -7,6 +7,7 @@ templ app() {
 			<title>mnt.profile</title>
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+			<meta name="format-detection" content="telephone=no"/>
 			<script src="https://cdn.tailwindcss.com"></script>
 			<link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css" rel="stylesheet"/>
 		</head>
