--- a/internal/template/app.templ
+++ b/internal/template/app.templ
@@ -13,7 +13,7 @@ templ app() {
 		</head>
 		<body>
 			<div class="col-span-4 sm:col-span-9">
-				<div class="bg-white p-6">
+				<div class="bg-white p-6 max-w-2xl mx-auto">
 					@profileSection()
 					@snsSection()
 					@favoriteSection()
