chore: fix typo

--- a/internal/template/favoriteSection.templ
+++ b/internal/template/favoriteSection.templ
@@ -9,7 +9,7 @@ type FavoriteData struct {
 
 var favoriteData = []FavoriteData{
 	{Key: "Movie", Values: []string{"Paul Thomas Anderson", "Aki Kaurismäki", "Quentin Tarantino", "Wes Anderson"}},
-	{Key: "Music", Values: []string{"Tempalay", "Superorganism", "Radiohead", "Oasis"}},
+	{Key: "Music", Values: []string{"Tempalay", "Superorganism", "Radiohead", "oasis"}},
 	{Key: "Vintage Clothing", Values: []string{}},
 }
 
