feat: add experience

--- a/internal/template/experienceSection.templ
+++ b/internal/template/experienceSection.templ
@@ -9,6 +9,7 @@ type ExperienceData struct {
 }
 
 var experienceData = []ExperienceData{
+	{position: "Software Engineer", companyName: "U-NEXT Co., Ltd.", startYearMonth: "2024/10", endYearMonth: "", details: []string{}},
 	{position: "Software Engineer", companyName: "OpenFashion Inc.", startYearMonth: "2020/02", endYearMonth: "2024/09", details: []string{"EC Platform: Worked as a Lead Engineer utilizing Go and Next.js.", "Generative AI Tool: Worked as a Lead Engineer utilizing Next.js."}},
 	{position: "Software Engineer", companyName: "DEPARTURE Inc.", startYearMonth: "2019/04", endYearMonth: "2020/01", details: []string{"Photography Request and Delivery Platform: Worked As a Software Engineer utilizing Ruby on Rails and Vue.js."}},
 	{position: "System Engineer", companyName: "NTT DATA, Inc.", startYearMonth: "2018/04", endYearMonth: "2019/03", details: []string{"Core Banking System: Worked as a System Engineer utilizing COBOL."}},
